@@ -263,6 +263,11 @@ Bug Fixes
 * Fixed a bug in converting date/time for years < 1000 (time.strptime()
   requires exactly 4 digits for %Y, hence a year < 1000 must be 0-padded).
 
+Other Changes
+-------------
+
+* Changed string quoting style for PostgreSQL and MySQL from \' to ''.
+
 SQLObject 0.7.7
 ===============
 
